--- a/style.css
+++ b/style.css
@@ -99,6 +99,11 @@ a {
     justify-self: center;
 }
 
+.display-user-small > .bi-bell:hover {
+    cursor: pointer;
+    color: var(--orange-color);
+}
+
 .small-avatar {
     height: 50px;
     border-radius: 50%;
@@ -222,6 +227,18 @@ a {
     font-size: 26px;
 }
 
+.section-one:hover {
+    cursor: default;
+}
+
+.section-two > h2:hover,
+.section-three > h2:hover {
+    padding-left: 20px;
+    cursor: pointer;
+    scale: 1.1;
+    transform-origin: center;
+    transition: 0.6s ease;
+}
 
 .main-content {
     color: var(--dark-color);
@@ -233,6 +250,7 @@ a {
     grid-template-columns: 3fr 1fr;
     grid-template-areas: 
         "main side";
+        
     box-shadow: inset 0 2px 10px -2px var(--shadow-color);
 }
 
@@ -299,6 +317,25 @@ a {
 
 .container-icons > .bi {
     font-size: 20px;
+}
+
+.bi-star:hover,
+.bi-eye:hover,
+.bi-share:hover {
+    scale: 1.3;
+    transform-origin: center;
+    transition: 0.3s ease;
+}
+.bi-star:hover {
+    color: var(--orange-color);
+}
+
+.bi-eye:hover {
+    color: var(--skybluelight-color);
+}
+
+.bi-share:hover {
+    color: var(--purple-color);
 }
 
 .side {
