--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ a {
     grid-template-columns: 2fr 1fr;
 
     align-items: center;
+    margin-top: 10px;
 }
 
 .search-form {
@@ -250,7 +251,7 @@ a {
     grid-template-columns: 3fr 1fr;
     grid-template-areas: 
         "main side";
-        
+
     box-shadow: inset 0 2px 10px -2px var(--shadow-color);
 }
 
