--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ a {
     cursor: pointer;
     scale: 1.1;
     transform-origin: center;
-    transition: 0.6s ease;
+    transition: 0.4s ease;
 }
 
 .main-content {
@@ -257,7 +257,7 @@ a {
 
 .main {
     grid-area: main;
-    padding: 40px 25px;
+    padding: 50px 25px;
     padding-right: 15px;
     padding-bottom: 60px;
     position: relative;
@@ -271,7 +271,7 @@ a {
 .main > h2 {
     position: absolute;
     left: 30px;
-    top: 6px;
+    top: 14px;
 }
 
 .container {
@@ -286,34 +286,64 @@ a {
     grid-auto-rows: 2fr 5fr 1fr;
     grid-template-areas: 
         "heading"
-        "discription"
+        "description"
         "icons";
 
-    padding: 20px;
+    padding: 10px;
 }
 
 .container-content > h2 {
+    font-size: 28px;
+
+    grid-area: description;
+    text-align: center;
+}
+
+.container-content:hover > h2 {
     grid-area: heading;
-    font-size: 22px;
+
+    font-size: 24px;
+    text-align: left;
+}
+
+.container-content:hover .content-heading {
+    color: var(--skybluedark-color);
 }
 
 .container-content > p {
-    grid-area: discription;
+    opacity: 0;
+    grid-area: description;
     font-family: "Rubik", Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: var(--darkerslate-color);
-    padding: 5px;
-    
+    padding-left: 5px;
+    padding-right: 12px; 
 }
 
+.container-content:hover > p {
+    opacity: 1;
+    transition: 1s ease;
+}
+
+
 .container-icons {
-    grid-area: icons;
+    grid-area: description;
     display: grid;
     gap: 20px;
 
     grid-template-columns: repeat(3, 1fr);
-    justify-self: flex-end;
+    justify-self: center;
+    margin-top: 60px;
+}
+
+.container-content:hover > .container-icons {
+    grid-area: icons;
+    display: grid;
+    gap: 20px;
+
+    margin-top: 0;
     padding-right: 20px;
+    justify-self: flex-end;
 }
 
 .container-icons > .bi {
@@ -343,7 +373,7 @@ a {
     color: var(--dark-color);
 
     grid-area: side;
-    padding: 40px 25px;
+    padding: 50px 25px;
     padding-left: 15px;
     padding-bottom: 60px;
     margin-right: 20px;
@@ -365,13 +395,13 @@ a {
 .side > h2:first-child {
     position: absolute;
     left: 14px;
-    top: 6px;
+    top: 14px;
 }
 
 .side > h2:last-of-type {
     position: absolute;
     left: 14px;
-    top: 406px;
+    top: 408px;
 }
 
 .about-container {
